cosine similarity - top 10 matches

--- a/Term-Term Matrix (+LSA).ipynb
+++ b/Term-Term Matrix (+LSA).ipynb
@@ -469,26 +469,31 @@
     {
      "data": {
       "text/plain": [
-       "array([23.58455957, -3.8423077 , -3.72714351, -4.18267233, -4.50621002,\n",
-       "       -7.88498872, -1.00249971, -3.38180004,  0.05664366, -2.34174871,\n",
-       "        7.71469125,  2.24882069, -2.86780642,  3.30200205,  0.53384913,\n",
-       "       -0.14569241, -6.91960857,  4.46809021, -0.8755531 , -0.34500788,\n",
-       "        1.34560167,  0.79551278,  1.87837834,  3.9746138 , -2.33946718,\n",
-       "        0.8474359 , -1.33399106,  2.25228635,  1.39781154,  0.14331482,\n",
-       "       -4.07431885,  3.8831578 , -0.46791531,  4.52465607,  0.76319028,\n",
-       "        1.39283559, -1.07396367, -3.21065598,  1.79307994, -2.53299039,\n",
-       "        0.36871564, -1.79526926, -1.4885172 ,  2.53918751, -1.05685913,\n",
-       "       -1.84037764,  1.33169383,  1.7401961 ,  0.50275634,  0.73807678,\n",
-       "        3.12272093, -2.10664928, -0.65899296,  2.43593886,  0.47679139,\n",
-       "       -2.46336953, -0.45362913, -0.27381993, -2.73473166, -1.53080227,\n",
-       "        2.61645934, -2.2146987 ,  0.94687627,  0.1860499 ,  1.30529361,\n",
-       "       -0.06189316,  0.41889557, -2.69064681, -0.39613722, -0.67069432,\n",
-       "        0.45982973, -0.04770034,  0.83313241, -0.92529712, -5.41161014,\n",
-       "        1.32105746,  2.97175641, -1.27257813, -1.34836253, -0.64611971,\n",
-       "       -1.35376981, -0.11849197, -0.24623534,  0.5769237 , -2.88268929,\n",
-       "        0.13599039, -0.15970533,  0.74407359, -0.40406404, -0.78290537,\n",
-       "       -2.02798246,  0.77411374,  3.9410168 ,  1.13276102, -1.58801587,\n",
-       "       -2.0184618 , -1.11809068,  0.29901816,  1.84440676, -3.43590766])"
+       "array([ 2.35845596e+01, -3.84230767e+00, -3.72714382e+00, -4.18267227e+00,\n",
+       "       -4.50620860e+00, -7.88498267e+00, -1.00250679e+00, -3.38179848e+00,\n",
+       "        5.66383617e-02, -2.34153819e+00,  7.71481499e+00,  2.24923434e+00,\n",
+       "       -2.86809213e+00,  3.30206685e+00,  5.34319894e-01, -1.45753630e-01,\n",
+       "       -6.91953826e+00,  4.47009982e+00, -8.77516881e-01, -3.41816223e-01,\n",
+       "        1.34011207e+00,  7.91244899e-01,  1.87614785e+00,  3.97524597e+00,\n",
+       "       -2.32709745e+00,  8.43940858e-01, -1.32130813e+00,  2.26466713e+00,\n",
+       "        1.38199081e+00,  1.32274875e-01, -4.03627737e+00,  3.90541555e+00,\n",
+       "       -4.48808236e-01,  4.52999645e+00,  7.98620985e-01,  1.36358028e+00,\n",
+       "       -1.10799523e+00, -3.11078507e+00,  1.79666804e+00, -2.51067837e+00,\n",
+       "       -3.60075139e-01, -1.86699839e+00, -1.32702197e+00,  2.59448927e+00,\n",
+       "       -1.20815749e+00, -1.90374782e+00,  1.35565159e+00,  1.72011108e+00,\n",
+       "       -2.90397363e-01,  9.35469145e-01,  3.23722582e+00,  1.38203420e+00,\n",
+       "       -3.38730214e-01,  3.10179717e+00,  7.62538106e-01,  1.89792604e+00,\n",
+       "       -9.04248967e-01, -1.72770864e-01, -3.64753518e+00, -1.21991985e+00,\n",
+       "       -1.39493241e+00, -2.94984164e+00,  1.12581553e+00,  3.13264477e-01,\n",
+       "        9.50355791e-01,  3.92095358e-02, -5.94401371e-01, -2.42688641e+00,\n",
+       "       -1.40635522e-01, -5.21351543e-01,  8.45596629e-01,  8.21259015e-01,\n",
+       "        1.28850313e+00, -1.95608056e+00,  2.95276971e+00,  2.86452824e+00,\n",
+       "       -1.40124276e+00,  1.29677089e+00,  2.67773763e+00, -1.51145757e+00,\n",
+       "        1.59183984e+00,  5.76741272e-01,  4.72844824e-02,  8.39066518e-01,\n",
+       "        1.18592827e+00,  2.78605576e-03, -2.52332937e+00,  7.40472061e-01,\n",
+       "       -2.66871350e-01,  1.09258337e+00,  1.55114086e-01, -5.63305512e-01,\n",
+       "        2.66507943e-01, -9.20595702e-01,  2.34567687e+00,  1.28344158e+00,\n",
+       "        2.91348346e-01,  1.41323894e+00, -3.24207494e+00,  2.15635738e+00])"
       ]
      },
      "execution_count": 28,
@@ -542,7 +547,7 @@
      "text": [
       "(100,)\n",
       "(1, 100)\n",
-      "[33.93916095]\n"
+      "[33.57804637]\n"
      ]
     }
    ],
@@ -567,7 +572,7 @@
      "output_type": "stream",
      "text": [
       "(3, 100)\n",
-      "[20.33368051 39.04578875 34.47907708]\n"
+      "[20.38316302 39.12603251 34.56945578]\n"
      ]
     }
    ],
@@ -601,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 1.] [20.33368051 39.04578875 34.47907708]\n"
+      "[1. 1. 1.] [20.38316302 39.12603251 34.56945578]\n"
      ]
     }
    ],
@@ -638,7 +643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.65836494]]\n"
+      "[[0.62979723]]\n"
      ]
     }
    ],
@@ -651,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "b1620a57-0cd9-4d62-9444-eecf29ea1d70",
    "metadata": {},
    "outputs": [
@@ -659,23 +664,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.42788438]\n",
-      " [0.44684201]\n",
-      " [0.30168014]]\n"
+      "[[0.44298945]\n",
+      " [0.44520478]\n",
+      " [0.30407804]]\n",
+      "(3, 1)\n",
+      "[0.44298945 0.44520478 0.30407804]\n",
+      "(3,)\n"
      ]
     }
    ],
    "source": [
-    " E = M_reduced[[1,3,5],:]\n",
+    "E = M_reduced[[1,3,5],:]\n",
     "v = M_reduced[W2I['nice'],:]\n",
     "\n",
-    "print(cosineSimilarity(E,v))"
+    "scores = cosineSimilarity(E,v)\n",
+    "print(scores)\n",
+    "print(scores.shape)\n",
+    "\n",
+    "scores = scores.squeeze()\n",
+    "print(scores)\n",
+    "print(scores.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a2efce06-5e5f-4bac-add6-009cbb7040dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.30155857 0.44298945 0.28930459 ... 0.41516238 0.22871733 0.3565078 ]\n",
+      "(11815,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "E = M_reduced\n",
+    "v = M_reduced[W2I['nice'],:]\n",
+    "\n",
+    "scores = cosineSimilarity(E,v)\n",
+    "scores = scores.squeeze()\n",
+    "print(scores)\n",
+    "print(scores.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a4187116-d156-4a08-b037-c4885a1c50d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMostSimilarWords(E, word, W2I, topn = 10):\n",
+    "    if type(word) is str:\n",
+    "        v = E[W2I[word],:]\n",
+    "    else:\n",
+    "        v = word\n",
+    "    scores = cosineSimilarity(E, v)\n",
+    "    scores = scores.squeeze()\n",
+    "    sortedScores = np.sort(scores)[::-1]\n",
+    "    sortedIdx = np.argsort(scores)[::-1]\n",
+    "    topNScores = sortedScores[:topn]\n",
+    "    topNScoreIdx = sortedIdx[:topn]\n",
+    "    return topNScores, topNScoreIdx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "58b3c57e-71fd-4c55-94d4-196814cbf206",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t10Scores, t10idx = getMostSimilarWords(M_reduced, 'nice', W2I)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "a555973a-14e9-4a63-8a44-c283bfb28264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         0.72842868 0.71886702 0.70862623 0.7038367  0.70305251\n",
+      " 0.69787531 0.6876513  0.6836204  0.68339808]\n",
+      "[ 1368  7548  3248  4441  9610  4375 10269  4631  3543  8678]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t10Scores)\n",
+    "print(t10idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1b2ed565-573a-4125-a6d0-64387c27c451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 nice\n",
+      "0.7284286830108052 pretty\n",
+      "0.7188670165041214 happy\n",
+      "0.7086262325483703 stuff\n",
+      "0.7038367007691811 dirty\n",
+      "0.7030525050529061 likes\n",
+      "0.6978753121229505 welcome\n",
+      "0.6876512962680659 looks\n",
+      "0.6836204026605797 boys\n",
+      "0.6833980790175862 maybe\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s, i in zip(t10Scores, t10idx):\n",
+    "    print(s, I2W[i])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb089c4-e096-4531-a60c-89a1465b08df",
+   "id": "9d05f049-ddd5-4ea0-82ac-68f129a25625",
    "metadata": {},
    "outputs": [],
    "source": []
