word analogies continues...

--- a/Term-Term Matrix (+LSA).ipynb
+++ b/Term-Term Matrix (+LSA).ipynb
@@ -469,31 +469,31 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2.35845596e+01, -3.84230767e+00, -3.72714382e+00, -4.18267227e+00,\n",
-       "       -4.50620860e+00, -7.88498267e+00, -1.00250679e+00, -3.38179848e+00,\n",
-       "        5.66383617e-02, -2.34153819e+00,  7.71481499e+00,  2.24923434e+00,\n",
-       "       -2.86809213e+00,  3.30206685e+00,  5.34319894e-01, -1.45753630e-01,\n",
-       "       -6.91953826e+00,  4.47009982e+00, -8.77516881e-01, -3.41816223e-01,\n",
-       "        1.34011207e+00,  7.91244899e-01,  1.87614785e+00,  3.97524597e+00,\n",
-       "       -2.32709745e+00,  8.43940858e-01, -1.32130813e+00,  2.26466713e+00,\n",
-       "        1.38199081e+00,  1.32274875e-01, -4.03627737e+00,  3.90541555e+00,\n",
-       "       -4.48808236e-01,  4.52999645e+00,  7.98620985e-01,  1.36358028e+00,\n",
-       "       -1.10799523e+00, -3.11078507e+00,  1.79666804e+00, -2.51067837e+00,\n",
-       "       -3.60075139e-01, -1.86699839e+00, -1.32702197e+00,  2.59448927e+00,\n",
-       "       -1.20815749e+00, -1.90374782e+00,  1.35565159e+00,  1.72011108e+00,\n",
-       "       -2.90397363e-01,  9.35469145e-01,  3.23722582e+00,  1.38203420e+00,\n",
-       "       -3.38730214e-01,  3.10179717e+00,  7.62538106e-01,  1.89792604e+00,\n",
-       "       -9.04248967e-01, -1.72770864e-01, -3.64753518e+00, -1.21991985e+00,\n",
-       "       -1.39493241e+00, -2.94984164e+00,  1.12581553e+00,  3.13264477e-01,\n",
-       "        9.50355791e-01,  3.92095358e-02, -5.94401371e-01, -2.42688641e+00,\n",
-       "       -1.40635522e-01, -5.21351543e-01,  8.45596629e-01,  8.21259015e-01,\n",
-       "        1.28850313e+00, -1.95608056e+00,  2.95276971e+00,  2.86452824e+00,\n",
-       "       -1.40124276e+00,  1.29677089e+00,  2.67773763e+00, -1.51145757e+00,\n",
-       "        1.59183984e+00,  5.76741272e-01,  4.72844824e-02,  8.39066518e-01,\n",
-       "        1.18592827e+00,  2.78605576e-03, -2.52332937e+00,  7.40472061e-01,\n",
-       "       -2.66871350e-01,  1.09258337e+00,  1.55114086e-01, -5.63305512e-01,\n",
-       "        2.66507943e-01, -9.20595702e-01,  2.34567687e+00,  1.28344158e+00,\n",
-       "        2.91348346e-01,  1.41323894e+00, -3.24207494e+00,  2.15635738e+00])"
+       "array([ 2.35845596e+01, -3.84230767e+00, -3.72714353e+00, -4.18267179e+00,\n",
+       "       -4.50620637e+00, -7.88498082e+00, -1.00249431e+00, -3.38179106e+00,\n",
+       "        5.66493189e-02, -2.34164772e+00,  7.71487962e+00,  2.24862627e+00,\n",
+       "       -2.86782475e+00,  3.30179696e+00,  5.31744074e-01, -1.46128015e-01,\n",
+       "       -6.91885692e+00,  4.46883094e+00, -8.77470424e-01, -3.44081529e-01,\n",
+       "        1.34722089e+00,  7.93185826e-01,  1.88389622e+00,  3.98075264e+00,\n",
+       "       -2.33217305e+00,  8.42739133e-01, -1.33308288e+00,  2.25249646e+00,\n",
+       "        1.40525303e+00,  1.38109446e-01, -4.09607412e+00,  3.84661152e+00,\n",
+       "       -4.66536869e-01,  4.52999528e+00,  7.42019354e-01,  1.41009833e+00,\n",
+       "       -1.11911460e+00, -3.22515986e+00,  1.82624856e+00, -2.54677002e+00,\n",
+       "       -3.79283951e-01, -1.94451311e+00, -1.24214108e+00,  2.41239823e+00,\n",
+       "       -1.00813674e+00, -1.96291195e+00,  1.45573229e+00,  1.76582203e+00,\n",
+       "       -2.44132943e-01,  1.22288878e+00,  3.59380295e+00, -1.10472196e+00,\n",
+       "       -9.61917687e-01, -2.42804999e+00,  7.70829501e-03, -2.89834949e+00,\n",
+       "        1.95122478e-01, -1.36479930e+00, -2.76538209e+00, -6.58899750e-01,\n",
+       "       -1.60831510e+00, -2.41860159e+00,  1.83493436e+00,  1.15797206e+00,\n",
+       "       -4.52195987e-01, -8.73270332e-03,  5.80951333e-01, -2.18579485e+00,\n",
+       "       -2.64024002e+00,  2.57171577e-01,  6.14560278e-01,  2.07350698e-01,\n",
+       "       -4.30094963e-01, -4.45072729e-01,  7.40738485e-02, -1.82771989e+00,\n",
+       "        1.92627643e-01,  3.96223743e+00, -2.04837535e+00, -1.90560238e+00,\n",
+       "       -2.35631576e+00,  2.46247555e+00,  8.82884334e-01,  1.70741014e-01,\n",
+       "        1.49512900e+00,  2.37198571e+00,  8.04053272e-01, -8.84578289e-01,\n",
+       "       -2.18529717e+00, -6.99699663e-01,  3.08260453e-01,  6.62281881e-01,\n",
+       "       -8.07288577e-02, -1.86006230e+00,  1.43407907e+00, -3.04536608e+00,\n",
+       "        2.57743418e-01,  3.43885684e+00, -2.00410203e+00, -1.54023354e+00])"
       ]
      },
      "execution_count": 28,
@@ -547,7 +547,7 @@
      "text": [
       "(100,)\n",
       "(1, 100)\n",
-      "[33.57804637]\n"
+      "[33.83458344]\n"
      ]
     }
    ],
@@ -572,7 +572,7 @@
      "output_type": "stream",
      "text": [
       "(3, 100)\n",
-      "[20.38316302 39.12603251 34.56945578]\n"
+      "[20.30046382 38.9649877  34.33470975]\n"
      ]
     }
    ],
@@ -606,7 +606,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 1.] [20.38316302 39.12603251 34.56945578]\n"
+      "[1. 1. 1.] [20.30046382 38.9649877  34.33470975]\n"
      ]
     }
    ],
@@ -643,7 +643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.62979723]]\n"
+      "[[0.62979536]]\n"
      ]
     }
    ],
@@ -664,11 +664,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.44298945]\n",
-      " [0.44520478]\n",
-      " [0.30407804]]\n",
+      "[[0.43738891]\n",
+      " [0.44835292]\n",
+      " [0.28982954]]\n",
       "(3, 1)\n",
-      "[0.44298945 0.44520478 0.30407804]\n",
+      "[0.43738891 0.44835292 0.28982954]\n",
       "(3,)\n"
      ]
     }
@@ -696,7 +696,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.30155857 0.44298945 0.28930459 ... 0.41516238 0.22871733 0.3565078 ]\n",
+      "[0.28198187 0.43738891 0.28617066 ... 0.39707412 0.18962805 0.37045404]\n",
       "(11815,)\n"
      ]
     }
@@ -734,17 +734,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "58b3c57e-71fd-4c55-94d4-196814cbf206",
    "metadata": {},
    "outputs": [],
    "source": [
-    "t10Scores, t10idx = getMostSimilarWords(M_reduced, 'nice', W2I)"
+    "t10Scores, t10idx = getMostSimilarWords(M_reduced, 'long', W2I)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "a555973a-14e9-4a63-8a44-c283bfb28264",
    "metadata": {},
    "outputs": [
@@ -752,9 +752,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.         0.72842868 0.71886702 0.70862623 0.7038367  0.70305251\n",
-      " 0.69787531 0.6876513  0.6836204  0.68339808]\n",
-      "[ 1368  7548  3248  4441  9610  4375 10269  4631  3543  8678]\n"
+      "[1.         0.83497223 0.78208388 0.78054073 0.77023909 0.7687479\n",
+      " 0.76140362 0.75847035 0.7543878  0.75262386]\n",
+      "[ 376 1495  125  336  844 1605 2528 1260 2202  106]\n"
      ]
     }
    ],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "1b2ed565-573a-4125-a6d0-64387c27c451",
    "metadata": {},
    "outputs": [
@@ -773,16 +773,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0 nice\n",
-      "0.7284286830108052 pretty\n",
-      "0.7188670165041214 happy\n",
-      "0.7086262325483703 stuff\n",
-      "0.7038367007691811 dirty\n",
-      "0.7030525050529061 likes\n",
-      "0.6978753121229505 welcome\n",
-      "0.6876512962680659 looks\n",
-      "0.6836204026605797 boys\n",
-      "0.6833980790175862 maybe\n"
+      "0.9999999999999996 long\n",
+      "0.834972231758375 short\n",
+      "0.7820838822704526 with\n",
+      "0.7805407286635775 over\n",
+      "0.7702390905922953 just\n",
+      "0.7687478971461881 almost\n",
+      "0.7614036184328778 half\n",
+      "0.7584703494763734 nearly\n",
+      "0.7543877965645346 longer\n",
+      "0.7526238626943997 while\n"
      ]
     }
    ],
@@ -792,9 +792,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7d41728-9e86-4adf-8d06-6ce5e94dc92e",
+   "metadata": {},
+   "source": [
+    "## Word Analogy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "09d31c80-b71b-4f0a-8681-f20cb22bb033",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def analogy(E, W2I, man, woman, king):\n",
+    "    v = E[W2I[king],:] - E[W2I[man],:] + E[W2I[woman],:]\n",
+    "    tNScores, tNidx = getMostSimilarWords(E, v, W2I)\n",
+    "    return tNScores, tNidx, v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "339804c6-dd2f-4c2e-bd9f-a0c9d74ee597",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6612729943422174 tiger\n",
+      "0.5786867762824788 lynx\n",
+      "0.5609158988174339 lions\n",
+      "0.548093404092618 twins\n",
+      "0.528940198600379 tigers\n",
+      "0.5225049200723977 youngest\n",
+      "0.5157679731744834 hamster\n",
+      "0.5142912919463599 panda\n",
+      "0.5027557310664732 helena\n",
+      "0.5019766553565002 siblings\n"
+     ]
+    }
+   ],
+   "source": [
+    "#analogy wont work properly here, because accurate embedding file didn't found in video (Using 'M_reduced' instead of actual 'E')\n",
+    "tNScores, tNidx, v = analogy(M_reduced, W2I, 'man', 'woman', 'tiger')\n",
+    "# tNScores, tNidx = analogy(M_reduced, W2I, 'tall', 'tallest', 'long')\n",
+    "\n",
+    "for i in range(len(tNidx)):\n",
+    "    print(tNScores[i],I2W[tNidx[i]])\n",
+    "    # break"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d05f049-ddd5-4ea0-82ac-68f129a25625",
+   "id": "7f7fafdf-f9fb-409d-9f94-f96d5d0685c5",
    "metadata": {},
    "outputs": [],
    "source": []
